# epaper-simplyplural-badge

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cfg.toml  diagram.json  image.raw  wokwi.toml  www-google-com-chain.pem
.cargo/: config.toml
src/: draw.rs  main.rs  net.rs  random.rs  simplyplural.rs  wifi.rs
