[package]
name = "epaper-simplyplural-badge"
version = "0.1.0"
authors = ["GnomedDev <david2005thomas@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-backtrace = { version = "0.12.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18.0", features = ["esp32", "embedded-hal"] }
esp-println = { version = "0.9.1", features = ["esp32", "log"] }
esp-alloc = { version = "0.4.0" }

embedded-hal-bus = "0.2.0"

epd-waveshare = { git = "https://github.com/caemor/epd-waveshare.git", default-features = false, features = [
    "epd2in13_v2",
    "graphics",
] }

log = { version = "0.4.21" }
embedded-graphics = { version = "0.8.1", default-features = false }

[profile.release]
codegen-units = 1
opt-level = 's'
lto = 'thin'
