[package]
name = "epaper-simplyplural-badge"
version = "0.1.0"
authors = ["GnomedDev <david2005thomas@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-wifi = { version = "0.7.0", features = [
    "esp32",
    "embassy-net",
    "wifi",
    "log",
], default-features = false }
esp-hal = { version = "0.19.0", features = ["esp32", "embedded-hal"] }
esp-println = { version = "0.10.0", features = ["esp32", "log"] }
esp-alloc = { version = "0.4.0" }
esp-hal-embassy = { version = "0.2.0", default-features = false, features = [
    "esp32",
    "executors",
] }
esp-mbedtls = { git = "https://github.com/GnomedDev/esp-mbedtls", branch = "update/esp-hal-0.19", default-features = false, features = [
    "async",
    "esp32",
] }

static_cell = "2.1.0"
log = { version = "0.4.21" }
embassy-time = { version = "0.3.1", default-features = false }
embassy-executor = { version = "0.5.0", features = [
    "integrated-timers",
    "nightly",
], default-features = false }
embassy-net = { version = "0.4.0", default-features = false, features = [
    "dhcpv4",
    "tcp",
    "log",
    "proto-ipv4",
] }
embedded-nal-async = { version = "0.7.1", default-features = false }

[profile.release]
codegen-units = 1
# opt-level = 's'
debug = "full"
lto = 'thin'
