[package]
name = "epaper-simplyplural-badge"
version = "0.1.0"
authors = ["GnomedDev <david2005thomas@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-wifi = { version = "0.7.0", features = [
    "esp32",
    "embassy-net",
    "wifi",
    "log",
], default-features = false }
esp-hal = { version = "0.19.0", features = ["esp32", "embedded-hal"] }
esp-println = { version = "0.10.0", features = ["esp32", "log"] }
esp-alloc = { version = "0.4.0" }
esp-hal-embassy = { version = "0.2.0", default-features = false, features = [
    "esp32",
    "executors",
] }

embedded-hal-bus = "0.2.0"
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare.git", default-features = false, features = [
    "epd2in13_v2",
    "graphics",
] }
log = { version = "0.4.21" }
embedded-graphics = { version = "0.8.1", default-features = false }
embedded_font = { git = "https://github.com/GnomedDev/embedded-font" }
rusttype = { version = "0.9.3", default-features = false }
heapless = { version = "0.8.0", default-features = false, features = ["serde"] }
embassy-executor = { version = "0.5.0", features = [
    "integrated-timers",
    "nightly",
], default-features = false }
embassy-net = { version = "0.4.0", default-features = false, features = [
    "dhcpv4",
    "dns",
    "tcp",
    "log",
    "proto-ipv4",
] }
embassy-time = { version = "0.3.1", default-features = false }
static_cell = "2.1.0"
reqwless = { git = "https://github.com/GnomedDev/reqwless", branch = "update/esp-hal-0.19", default-features = false, features = [
    "embedded-tls",
] }
aformat = "0.1.3"
serde = { version = "1.0.204", features = ["derive"], default-features = false }
serde_json = { version = "1.0.120", features = [
    "alloc",
], default-features = false }
const-random = "0.1.18"

[profile.release]
codegen-units = 1
# opt-level = 's'
debug = "full"
lto = 'thin'
